--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "workload-detection-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "REST API to provide image URLs and store agent provided features. The goal of the project is to label features in images for further deep learning network training.",
   "main": "app.js",
   "scripts": {
@@ -16,7 +17,6 @@
   "author": "Andrey Schoier",
   "license": "Apache License 2.0",
   "dependencies": {
-    "express": "^4.18.2",
-    "select-random-file": "^1.2.4"
+    "express": "^4.18.2"
   }
 }
