--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Andrey Schoier",
   "license": "Apache License 2.0",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "image-size": "^1.0.2"
   }
 }
