--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.18.2",
-    "image-size": "^1.0.2"
+    "image-size": "^1.0.2",
+    "cors": "^2.8.5"
   }
 }
