--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "croppr": "^2.3.1",
     "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.7"
   }
